# confnect

./: README.md  README.nd
backend/: .env.sample  .gitignore  Dockerfile  alembic.ini  celerybeat-schedule  celerybeat-schedule.db  docker-compose.yml  dump.rdb  pyproject.toml  test.py
backend/migrations/: env.py
backend/migrations/versions/: 0854df9c8756_forms.py  3306fe334c1b_forms.py  6a5661783d3c_questions.py  7910b89c6344_tokens.py  a2c7d12106fe_get_expirated_to_token.py  aa03db55e4c6_feedbacks.py  b0f16db2cdeb_add_timestamp.py  b26645f2b181_events.py  b87615443925_invitation_code.py  ba2fcf6cf847_add_event_status.py  cf1eb9a4200a_users.py  d478c2f15986_make_update_nullable_in_user.py  f24f2be17ac7_users.py
backend/source/: __init__.py  celery.py  database.py  main.py
backend/source/celery/: celery_app.py  tasks.py
backend/source/config/: authorization.py  base.py  config.py  database.py  env_config.py  routes.py  secret.py
backend/source/crud/: base.py  events.py  feedback.py  forms.py  invitation_codes.py  questions.py  tokens.py  user.py
backend/source/dependencies/: depends.py
backend/source/models/: __init__.py  access_token.py  base.py  event.py  feedback.py  form.py  invitation_code.py  questions.py  token.py  user.py
backend/source/routes/: authorization.py  events.py  forms.py  test.py  users.py
backend/source/schemas/: base.py  event.py  feedback.py  form.py  question.py  user.py  utils.py
backend/source/templates/: reset_password.html
backend/source/utils/: authenticate.py  clear_db.py  codes.py  connection_manager.py  emails.py  enums.py  token.py
(+48 files in other folders)
