[tool.poetry]
name = "backend"
version = "0.0.1"
description = ""
authors = ["Kamil Fedio <kamilf827@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
sqlalchemy = {extras = ["asyncio", "mypy"], version = "^2.0.32"}
databases = "^0.9.0"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.9"
pydantic = "^2.8.2"
email-validator = "^2.2.0"
asyncpg = "^0.29.0"
uvicorn = "^0.30.6"
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
qrcode = {extras = ["pil"], version = "^7.4.2"}
celery = "^5.4.0"
redis = "^5.0.8"
aiosmtplib = "^3.0.2"
asgiref = "^3.8.1"
jinja2 = "^3.1.4"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
